--- a/portfolio.html
+++ b/portfolio.html
@@ -49,21 +49,21 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
-                                <a target="_blank" href="assets/images/gryffindor.png">
-                                    <img src="assets/images/gryffindor.png" alt="Gryffindor" title="Gryffindor">
+                                <a target="_blank" href="https://emswann.github.io/still-open/">
+                                    <img src="assets/images/Still-Open.jpg" alt="Still Open?" title="Still Open?">
                                 </a>
                                 <div class="caption">
-                                    <h3>Gryffindor</h3>
+                                    <h3>Still Open?</h3>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
-                                <a target="_blank" href="assets/images/ravenclaw.png">
-                                    <img src="assets/images/ravenclaw.png" alt="Ravenclaw">
+                                <a target="_blank" href="https://github.com/cslewislives/CommandlineHangman">
+                                    <img src="assets/images/CommandlineHangman2.jpg" alt="Commandline Hangman" title="Commandline Hangman">
                                 </a>
                                 <div class="caption">
-                                    <h3>Ravenclaw</h3>
+                                    <h3>Commandline Hangman</h3>
                                 </div>
                             </div>
                         </div>
