--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
                                 <a target="_blank" href="https://emswann.github.io/still-open/">
-                                    <img src="./assets/images/Still-Open.jpg" alt="Still Open?" title="Still Open?">
+                                    <img src="./assets/images/Still-Open.JPG" alt="Still Open?" title="Still Open?">
                                 </a>
                                 <div class="caption">
                                     <h3>Still Open?</h3>
@@ -60,7 +60,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
                                 <a target="_blank" href="https://github.com/cslewislives/CommandlineHangman">
-                                    <img src="./assets/images/CommandlineHangman2.jpg" alt="Commandline Hangman" title="Commandline Hangman">
+                                    <img src="./assets/images/CommandlineHangman2.JPG" alt="Commandline Hangman" title="Commandline Hangman">
                                 </a>
                                 <div class="caption">
                                     <h3>Commandline Hangman</h3>
