--- a/portfolio.html
+++ b/portfolio.html
@@ -71,11 +71,11 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
-                                <a target="_blank" href="assets/images/hufflepuff.png">
-                                    <img src="assets/images/hufflepuff.png" alt="Hufflepuff">
+                                <a target="_blank" href="https://github.com/cslewislives/Bamazon">
+                                    <img src="assets/images/Bamazon.jpg" alt="Bamazon">
                                 </a>
                                 <div class="caption">
-                                    <h3>Hufflepuff</h3>
+                                    <h3>Bamazon</h3>
                                 </div>
                             </div>
                         </div>
