--- a/portfolio.html
+++ b/portfolio.html
@@ -81,11 +81,11 @@
                         </div>
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
-                                <a target="_blank" href="assets/images/slytherin.png">
-                                    <img src="assets/images/slytherin.png" alt="Slytherin">
+                                <a target="_blank" href="https://criticalrolefriends.herokuapp.com">
+                                    <img src="assets/images/FindAFriend.jpg" alt="FindAFriend">
                                 </a>
                                 <div class="caption">
-                                    <h3>Slytherin</h3>
+                                    <h3>Find a Friend</h3>
                                 </div>
                             </div>
                         </div>
