--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
                                 <a target="_blank" href="https://github.com/cslewislives/Bamazon">
-                                    <img src="assets/images/Bamazon.JPG" alt="Bamazon">
+                                    <img src="assets/images/Bamazon.jpg" alt="Bamazon">
                                 </a>
                                 <div class="caption">
                                     <h3>Bamazon</h3>
@@ -82,7 +82,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
                                 <a target="_blank" href="https://criticalrolefriends.herokuapp.com">
-                                    <img src="assets/images/FindAFriend.JPG" alt="FindAFriend">
+                                    <img src="assets/images/FindAFriend.jpg" alt="FindAFriend">
                                 </a>
                                 <div class="caption">
                                     <h3>Find a Friend</h3>
