--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
                                 <a target="_blank" href="https://emswann.github.io/still-open/">
-                                    <img src="assets/images/Still-Open.jpg" alt="Still Open?" title="Still Open?">
+                                    <img src="assets/images/StillOpen.jpg" alt="Still Open?" title="Still Open?">
                                 </a>
                                 <div class="caption">
                                     <h3>Still Open?</h3>
