--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
                                 <a target="_blank" href="https://emswann.github.io/still-open/">
-                                    <img src="assets/images/StillOpen.jpg" alt="Still Open?" title="Still Open?">
+                                    <img src="assets/images/StillOpen.png" alt="Still Open?" title="Still Open?">
                                 </a>
                                 <div class="caption">
                                     <h3>Still Open?</h3>
@@ -60,7 +60,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
                                 <a target="_blank" href="https://github.com/cslewislives/CommandlineHangman">
-                                    <img src="assets/images/CommandlineHangman.jpg" alt="Commandline Hangman" title="Commandline Hangman">
+                                    <img src="assets/images/CommandlineHangman.png" alt="Commandline Hangman" title="Commandline Hangman">
                                 </a>
                                 <div class="caption">
                                     <h3>Commandline Hangman</h3>
@@ -72,7 +72,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
                                 <a target="_blank" href="https://github.com/cslewislives/Bamazon">
-                                    <img src="assets/images/Bamazon.jpg" alt="Bamazon">
+                                    <img src="assets/images/Bamazon.png" alt="Bamazon">
                                 </a>
                                 <div class="caption">
                                     <h3>Bamazon</h3>
@@ -82,7 +82,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="thumbnail gallery">
                                 <a target="_blank" href="https://criticalrolefriends.herokuapp.com">
-                                    <img src="assets/images/FindAFriend.jpg" alt="FindAFriend">
+                                    <img src="assets/images/FindAFriend.png" alt="FindAFriend">
                                 </a>
                                 <div class="caption">
                                     <h3>Find a Friend</h3>
